--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,11 +1,13 @@
 <div class="column is-4">
     <div class="block homeblock">
-    <h1>Digital Garden Homepage</h1>
+    <h1>il Giardino Digitale di MBHR</h1>
 
     <p>
-        Jekyll Garden lets you build a digital garden of atomic notes (working notes) using Github pages from your Obsidian vault.
-        Check out <a href="../posts/how-to">Features </a> to know the the theme and, <a href="../posts/how-to"> Install and Setup </a> to know more.
-        Go to <a href="../notes"> notes </a> to see the note feed.
+        Si tratta di un progetto sperimentale che utilizza Obsidian e il tema Jekyll Garden per mettere online note e riflessioni principalmente ad uso personale.
+
+        Presto arriverà una roadmap e lo spazio commenti.
+
+        Intanto, controllate lo spazio <a href="../notes"> Note </a> per vedere il note feed.
     </p>
 
     </div>
