--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -55,11 +55,9 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="../posts/how-to"  class="navbar-item">
+        <a href="../notes"  class="navbar-item">
           Note
         </a>
-        <a href="../notes" target="_blank" class="navbar-item">
-
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
         <div class="navbar-item">
