--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -55,10 +55,19 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="../notes"  class="navbar-item">
-          Note
+        <a href="../cinema"  class="navbar-item">
+          Cinema -
         </a>
       </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a href="../notes"  class="navbar-item">
+          Tutte le note
+        </a>
+      </div>
+
+
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
         <div class="navbar-item">
           <div class="buttons">
