--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -56,7 +56,7 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <a href="../cinema"  class="navbar-item">
-          Cinema -
+          Cinema
         </a>
       </div>
 
