--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -55,7 +55,7 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="../posts_old"  class="navbar-item">
+        <a href="../posts"  class="navbar-item">
           Cinema
         </a>
       </div>
