--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -67,6 +67,13 @@
         </a>
       </div>
 
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a href="../index"  class="navbar-item">
+            index
+          </a>
+        </div>
+
 
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
         <div class="navbar-item">
