--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -69,8 +69,8 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a href="../index"  class="navbar-item">
-            index
+          <a href="../posts"  class="navbar-item">
+            Posts
           </a>
         </div>
 
