--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -2,7 +2,7 @@
 ---
 
 <!-------------------------------------------------------------------------------------
-* HTML BASE PER TUTTI I FILE: POST E NOTE E ANCHE INDEX
+* HTML BASE PER TUTTI I FILE: POST E NOTE E ANCHE INDEX POI CI SONO I CASE IN QUESTO FILE CHE DIFFERENZIANO IL CODICE
 ------------------------------------------------------------------------------------>
 
 <!DOCTYPE html>
