--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -62,6 +62,13 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
+        <a href="../notes/fotografia"  class="navbar-item">
+          Fotografia
+        </a>
+      </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
         <a href="../notes"  class="navbar-item">
           Tutte le note
         </a>
