--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -7,7 +7,7 @@
 <br>
         Presto arriverà una roadmap e lo spazio commenti.
 <br>
-        Intanto, controllate lo spazio <a href="../notes"> Note </a> per vedere il note feed.
+        Intanto, controllate lo spazio <a href="../notes"> Note </a> per vedere il feed.
     </p>
 
     </div>
