--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -61,24 +61,29 @@
         </a>
       </div>
 
-      <div class="navbar-start">
-        <a href="../notes/fotografia"  class="navbar-item">
-          Fotografia
-        </a>
-      </div>
+      <div id="navbarBasicExample" class="navbar-menu">
 
       <div class="navbar-start">
         <a href="../notes/fotografia"  class="navbar-item">
           Fotografia
         </a>
       </div>
+
+      <div id="navbarBasicExample" class="navbar-menu">
+
+      <div class="navbar-start">
+        <a href="../notes/fotografia"  class="navbar-item">
+          Fotografia
+        </a>
+      </div>
+
+      <div id="navbarBasicExample" class="navbar-menu">
 
         <div class="navbar-start">
           <a href="../posts"  class="navbar-item">
             Posts
           </a>
         </div>
-      </div>
 
 
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
