--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -56,16 +56,16 @@
     <div id="navbarBasicExample" class="navbar-menu">
 
       <div class="navbar-start">
-        <a href="../notes/cinema"  class="navbar-item">
-          Cinema
+        <a href="../notes/diario"  class="navbar-item">
+          Diario
         </a>
       </div>
 
-      <div id="navbarBasicExample" class="navbar-menu">
+    <div id="navbarBasicExample" class="navbar-menu">
 
       <div class="navbar-start">
-        <a href="../notes/fotografia"  class="navbar-item">
-          Fotografia
+        <a href="../notes/cinema"  class="navbar-item">
+          Cinema
         </a>
       </div>
 
