--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -77,6 +77,12 @@
         </a>
       </div>
 
+      <div class="navbar-start">
+        <a href="../notes/cose"  class="navbar-item">
+          Cose
+        </a>
+      </div>
+
       <div id="navbarBasicExample" class="navbar-menu">
 
         <div class="navbar-start">
